# LavenderHookFork

./: README.md
LavenderHook/: CMakeLists.txt
LavenderHook/libs/: ViGEmClient.lib
LavenderHook/src/: dllmain.cpp
LavenderHook/src/assets/resources/: resources.rc
LavenderHook/src/config/: ConfigManager.cpp  ConfigManager.h
LavenderHook/src/input/: InputAutomation.cpp  InputAutomation.h  VirtualGamepad.cpp  VirtualGamepad.h  VkTable.h
LavenderHook/src/memory/: Hooks.cpp  Wndproc.cpp
LavenderHook/src/memory/aobhooks/: EnemiesAliveHook.h  EnemiesMaxFallbackHook.h  ManaHook.h  TimeHook.h  WaveDataHook.h
LavenderHook/src/memory/aobutils/: AobScanner.h  ScannerUtils.h
LavenderHook/src/memory/dx11/: Direct11.cpp  Direct11.h
LavenderHook/src/misc/: Globals.h  LogMonitor.cpp  LogMonitor.h  NumberFormat.h  XpManager.cpp  XpTables.h
LavenderHook/src/misc/logmonitor/: LogMonitor.cpp  LogMonitor.h
LavenderHook/src/misc/xpsystem/: XpManager.cpp  XpManager.h  XpTables.h
LavenderHook/src/sound/: SoundPlayer.cpp  SoundPlayer.h
LavenderHook/src/ui/: GUI.cpp  HideNotification.cpp  UIRegister.cpp  UIWindowBuilder.cpp
LavenderHook/src/ui/components/: LavenderFadeOut.h  LavenderHotkey.cpp  LavenderHotkey.h
LavenderHook/src/updater/: Updater.cpp  Updater.h
LavenderHook/src/windows/: BuffingWindow.cpp  BuffingWindow.h  GamepadWindow.cpp  GamepadWindow.h  GeneralButtonsWindow.cpp  MacroEditorWindow.cpp  MacroEditorWindow.h  MacroManagerWindow.cpp  MacroManagerWindow.h  MacroWindowsShared.cpp  MacroWindowsShared.h  MiscButtonsWindow.cpp  ParagonLevelWindow.cpp  ParagonLevelWindow.h  ProfilesWindow.cpp  ProfilesWindow.h  ToggleMenuWindow.cpp  WaveTrackerWindow.cpp  WaveTrackerWindow.h
LavenderHook/src/windows/functions/: BuffingActions.cpp  BuffingActions.h  FunctionRegistry.cpp  FunctionRegistry.h  GeneralButtonActions.cpp  (+1 more)
LavenderUpdater/: CMakeLists.txt  resources.rc.in
LavenderUpdater/src/core/: updater_core.cpp
LavenderUpdater/src/httpclient/: http_client.cpp  http_client.h
LavenderUpdater/src/versionutils/: version_utils.cpp  version_utils.h
(+1 files in other folders)
